# urcrat

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  urcrat
.github/workflows/: ci.yml
deps_crate/: Cargo.toml
src/: alloc_finder.rs  analysis.rs  compile_util.rs  disjoint_set.rs  graph.rs  lib.rs  tag_analysis.rs  ty_finder.rs  ty_info.rs  ty_shape.rs  unsafety.rs
src/andersen/: analysis.rs  mod.rs  solver.rs  tests.rs
src/may_analysis/: mod.rs  tests.rs
src/must_analysis/: analysis.rs  domains.rs  semantics.rs  tests.rs
src/points_to/: analysis.rs  mod.rs  tests.rs
src/relational/: analysis.rs  domains.rs  mod.rs  semantics.rs  tests.rs
src/steensgaard/: mod.rs  test.rs  tests.rs
