[package]
name = "urcrat"
version = "1.0.0"
authors = ["Jaemin Hong <hjm0901@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
rustfix = "0.6.1"
etrace = "1.1.1"
lazy_static = "1.4.0"
typed-arena = "2.0.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = "1.0.189"
serde_json = "1.0.107"

[package.metadata.rust-analyzer]
rustc_private = true
